common/third_party/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/explain_diagnostics_ts_library_test.golden
third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:8:3 - error TS21228: [tsetse] [ban-element-innerhtml-assignments] Assigning directly to Element#innerHTML can result in XSS vulnerabilities. If the assigned value does not contain HTML, assign it to the DOM element's textContent property. Otherwise, please either use a safe template system (go/templatesystems), or create a SafeHtml value by sanitizing the HTML and set the element's innerHTML property by using the DOM element's setInnerHtml setter exported in 'safevalues/dom'. See go/ts-dom-sink#safehtml for more details. Please use go/tsconformance-yaqs if you have further questions. Suggested fix:
- Replace the full match with: div.textContent = 'hello'

8   div.innerHTML = 'hello';
    ~~~~~~~~~~~~~~~~~~~~~~~
third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:9:3 - error TS21228: [tsetse] [ban-element-innerhtml-assignments] Assigning directly to Element#innerHTML can result in XSS vulnerabilities. If the assigned value does not contain HTML, assign it to the DOM element's textContent property. Otherwise, please either use a safe template system (go/templatesystems), or create a SafeHtml value by sanitizing the HTML and set the element's innerHTML property by using the DOM element's setInnerHtml setter exported in 'safevalues/dom'. See go/ts-dom-sink#safehtml for more details. Please use go/tsconformance-yaqs if you have further questions. Suggested fix:
- Replace the full match with: (div as HTMLElement).textContent = 'hello'

9   (div as HTMLElement).innerHTML = 'hello';
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

